# 3dvr-portal

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  RELEASE_NOTES.md  SELF_REVIEW.md  account-recovery.js  admin.html  auth-identity.js  cache-reset.html  chat.html  chatbot.html  compat.html  earth-garden.html  education.html  experimental.html  free-trial.html  games.html  gun-demo.html  gun-explorer.html  gun-init.js  index-style.css  index.html  install.sh  issue-launcher.js  jetpack.html  lead-generation.html  magic-link.html  manifest.webmanifest  memory.html  mindfulness-session.html  money.html  navbar.js  notes.html  oauth.js  old-tasks.html  package-lock.json  package.json  password-reset.html  (+18 more)
apps/agent/: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  install.sh  package-lock.json  package.json  pyproject.toml
apps/agent/docs/: autonomous-after-ignition-business.md  community-naming-service.md  next-work-breakdown.md
apps/agent/missions/: life-upgrade-v01.json
apps/agent/self_yolo/: cli.py  rollback.py  self_update_agent.py  self_yolo_agent.py  self_yolo_agent.py.new  self_yolo_loop.py  yolo_app.py  yolo_new_site.py
apps/agent/test/: agent-heartbeat.test.js  cli.test.js  contact-form-fill.test.js  contact-route.test.js  crm-sync.test.js  experiment-optimizer.test.js  inbox-monitor.test.js  inbox-reply-copy.test.js  lead-crawl.test.js  lead-enrich.test.js  lead-quality.test.js  mission-runner.test.js  outreach-compliance.test.js  outreach-draft-queue.test.js  outreach-message.test.js  sales-summary.test.js  self-yolo-workflows.test.js  (+2 more)
(+1088 files in other folders)
